[package]
name = "db-redis"
version = "0.1.2"
edition = "2024"
authors = [ "kuyoonjo" ]
description = "redis client"
license = "MIT"
repository = "https://github.com/kuyoonjo/db-redis.git"
keywords = ["redis", "client"]

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "net", "io-util", "sync", "time"] }
redis = { version = "0.31.0", features = [
    "cluster-async",
    "tokio-comp",
    "connection-manager",
] }
deadpool = "0.12.2"
